# Canim

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  codecov.yml  conanfile.txt  lgtm.yml  main.cpp
app/: main.cpp
cmake/: CodeCoverage.cmake  Warnings.cmake
src/: CMakeLists.txt
src/animation/: animation.cpp  animation.h
src/mobject/: mobject.cpp  mobject.h
src/utils/: Color.cpp  Color.h
test/: CMakeLists.txt  boost_unit_test.h
test/animation/: animation_tests.cpp
tests/: CMakeLists.txt
tests/animation/: animation_tests.cpp
tests/scene/: scene_tests.cpp
tools/: clang-format.hook  install_clang.sh
